--- a/daw/sistemas/sistemasUno.html
+++ b/daw/sistemas/sistemasUno.html
@@ -5,7 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../../css/clases.css">
-  
   <link rel="stylesheet" href="../../css/mediaQ.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,12 +18,9 @@
         <a href="../../index.html">Principal</a>
     </div>
   </header>
-  <main class="main--Apuntes">
-    <div class="tituloTema">
-      <h1>Tema 1.- Instalación software libre y propietario</h1>
-    </div>
-      <article class="articuloApuntes">
-        <h3 class="subTitulo_3">Introducción</h3>
+  <div class="contenedorApuntes">
+    <div class="tituloTema" id="unoUno"><h1>Tema 1.- Instalación software libre y propietario</h1></div>
+        <h4 class="apartado">Introducción</h4>
           <ul>
             <li><strong>Sistema Informático:</strong> Es aquel que almacena y procesa información interrelacionando el hardware y software de un ordenador. </li>
             <li><strong>Software Libre:</strong> Implica que los usuarios podrán modificar, copiar, ejecutar e incluso mejorar dicho programa.</li>
@@ -34,29 +30,25 @@
           <li>- Hardware: Antes de escoger el software debemos tener encuenta en que equipos vamos a instalarlo. Características técnicas, conectividad y prestaciones. Si los equipos están en red debemos tener muy clara la estructura para alcanzar el máximo rendimiento.</li>
           <li>- Software: Debemos conocer el tipo de programa que se necesita, sus funcionalidades y la liciencia bajo la que se distribuye.</li>
         </ol>
-      </article>
-    <!--*************************************************************-->
-    <article class="articuloApuntes">
-      <a name="1.1"></a>
-      <h3 class="subTitulo_3">Estructura y componentes de un sistema informático, periféricos y adaptadores para la conexión de dispositivos</h3>
+      <h3 class="subTitulo" id="unoDos">Estructura y componentes de un sistema informático, periféricos y adaptadores para la conexión de dispositivos</h3>
         <p>El sistema informático se compone de una parte central (ordenador) y unos dispositivos que facilitan la entrada/salida de informácion (periféricos). Un ordenador está formado por dos tipos de elementos:</p>
         <ul>
           <li>Software: Componentes lógicos o programas.</li>
           <li>Hardware: Componentes físicos y electrónicos.</li>
         </ul>
-      <h4 >Hardware</h4>
+      <h4 class="apartado">Hardware</h4>
         <p>Podemos encontrar diferentes tipos, dependiendo del rendimiento; comentaremos los fundamentales:</p>
-        <ol class="decimal">
-          <li>Caja, torre o chasis: Recinto donde se alojan los componentes. Se encarga de su protección, suele ser metálico o plástico.</li>
-          <li>Fuente de alimentación: Es un transformador de corriente alterna a corriente continua con un voltaje apropiado para el funcionamiento de los componentes.</li>
-          <li>Placa madre o placa base: Elemento principal, en el cual se conectan todos los componentes, también conocido como componente integrador.</li>
-          <li>CPU (Unidad central de proceso): Se encarga de interpretar y procesar las intrucciones, a través de operaciones aritméticas, lógicas y entrada/salida del sistema. "El cerebro".</li>
-          <li>Disco Duro: Es la memoria del ordenador, almacena archivos y programas, ya que es capaz de amacenar datos estando el odenador apagado.</li>
-          <li>Memoria Ram (Random access memory): Permite intercambiar información entre el sistema operativo, el software, el procesador y otros dispositivos, tiene una gran velocidad de lectura/escritura, es un tipo de memoria volátil, no se guardan los datos cuando el equipo no tiene energía.</li>
-          <li>Tarjeta gráfica: Se encarga de procesar los datos que son enviados desde el ordenador y transformarlos en datos visibles y comprensibles para el usuario.</li>
-          <li>Tarjeta de sonido: Es una expansión que permite enviar información de audio a un dispositivo de audio.</li>
-          <li>Tarjeta de red: Permite acceder a una red y compartir sus recursos.</li>
-          <li>Otros: Unidades de almacenamiento adicionales. Periféricos de entrada/salida.</li>
+        <ol>
+          <li><strong>Caja, torre o chasis</strong>: Recinto donde se alojan los componentes. Se encarga de su protección, suele ser metálico o plástico.</li>
+          <li><strong>Fuente de alimentación</strong>: Es un transformador de corriente alterna a corriente continua con un voltaje apropiado para el funcionamiento de los componentes.</li>
+          <li><strong>Placa madre o placa base</strong>: Elemento principal, en el cual se conectan todos los componentes, también conocido como componente integrador.</li>
+          <li><strong>CPU (Unidad central de proceso)</strong>: Se encarga de interpretar y procesar las intrucciones, a través de operaciones aritméticas, lógicas y entrada/salida del sistema. "El cerebro".</li>
+          <li><strong>Disco Duro</strong>: Es la memoria del ordenador, almacena archivos y programas, ya que es capaz de amacenar datos estando el odenador apagado.</li>
+          <li><strong>Memoria Ram (Random access memory)</strong>: Permite intercambiar información entre el sistema operativo, el software, el procesador y otros dispositivos, tiene una gran velocidad de lectura/escritura, es un tipo de memoria volátil, no se guardan los datos cuando el equipo no tiene energía.</li>
+          <li><strong>Tarjeta gráfica</strong>: Se encarga de procesar los datos que son enviados desde el ordenador y transformarlos en datos visibles y comprensibles para el usuario.</li>
+          <li><strong>Tarjeta de sonido</strong>: Es una expansión que permite enviar información de audio a un dispositivo de audio.</li>
+          <li><strong>Tarjeta de red</strong>: Permite acceder a una red y compartir sus recursos.</li>
+          <li><strong>Otros</strong>: Unidades de almacenamiento adicionales. Periféricos de entrada/salida.</li>
         </ol>
         <p>En windows, el administrador de dispositivos nos muestra una lista de todos los componentes conectados a nuestro ordenador. Podemos actualizar o instalar drivers para configurar determinados periféricos.</p>
         <h4 >Software</h4>
@@ -340,6 +332,6 @@
       
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
-  </main>
+  </div>
 </body>
 </html>
