--- a/daw/sistemas/sistemasUno.html
+++ b/daw/sistemas/sistemasUno.html
@@ -75,7 +75,7 @@
         <p>Una red de ordenadores es un conjunto de equipos interconectados entre sí que permiten compartir recursos e información. Es necesario que dispongan de tarjeta de red, cables de conexión, dispositivos perifericos y un software adecuado.</p>
         <h4 class="apartado">Tipos de red según su extensión</h4>
           <ol>
-            <li><strong>(Red de área personal)</strong>: Cuando los equipos están situados a pocos metros y se utilizan solo para uso personal. Aparecieron para que el usuario no tuviera un solo equipo (ordenador) sino también tabletas, moviles y televisores. Para sacar provecho a estos dispositivos y las prestaciones que ofrecen es conveniente realizar una red entre todos.</li>
+            <li><strong>PAN (Red de área personal)</strong>: Cuando los equipos están situados a pocos metros y se utilizan solo para uso personal. Aparecieron para que el usuario no tuviera un solo equipo (ordenador) sino también tabletas, moviles y televisores. Para sacar provecho a estos dispositivos y las prestaciones que ofrecen es conveniente realizar una red entre todos.</li>
             <li><strong>WLAN</strong>: Red lan inalámbrica, transmite información de forma inalámbrica.</li>
             <li><strong>LAN(Red de área local)</strong>: Dispone de un concentrador. A él se conectan todos los nodos de un edificio mediante un router.</li>
             <li><strong>MAN(Red de área metropolitana)</strong>: Puede abarcar desde varios edificios hasta una ciudad entera. Es la interconexión de varias LAN.</li>
