--- a/daw/sistemas/sistemasUno.html
+++ b/daw/sistemas/sistemasUno.html
@@ -30,6 +30,11 @@
           <li><strong>Hardware</strong>: Antes de escoger el software debemos tener encuenta en que equipos vamos a instalarlo. Características técnicas, conectividad y prestaciones. Si los equipos están en red debemos tener muy clara la estructura para alcanzar el máximo rendimiento.</li>
           <li><strong>Software</strong>: Debemos conocer el tipo de programa que se necesita, sus funcionalidades y la liciencia bajo la que se distribuye.</li>
         </ol>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+      </div>
       <h3 class="subTitulo" id="unoDos">Estructura y componentes de un sistema informático, periféricos y adaptadores para la conexión de dispositivos</h3>
         <p>El sistema informático se compone de una parte central (ordenador) y unos dispositivos que facilitan la entrada/salida de informácion (periféricos). Un ordenador está formado por dos tipos de elementos:</p>
         <ul>
@@ -71,6 +76,11 @@
         </ol>
         <p>El sistema informático como equipo único o conjunto de equipos de red, la conectividad es un término clave. Referencia la capacidad de los equipos y dispositivos para conectarse entre sí.</p>
         <p>Todo sistema informático estará compuesto de hardware y software. En un sentido más amplio debemos añadir a los usuarios (Recursos humanos) y por supuesto, ls información.</p>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+      </div>
       <h3 class="subTitulo" id="">Tipos y topologias de red</h3>
         <p>Una red de ordenadores es un conjunto de equipos interconectados entre sí que permiten compartir recursos e información. Es necesario que dispongan de tarjeta de red, cables de conexión, dispositivos perifericos y un software adecuado.</p>
         <h4 class="apartado">Tipos de red según su extensión</h4>
@@ -112,12 +122,22 @@
           <li><strong>RJ-45</strong>: Se emplean cables ethernet de 8 pines.</li>
           <li><strong>Red inalámbrica</strong>: Ha supuesto una revolución en este ámbito, permite habilitar redes sin necesidad de cablearlas físicamente.</li>
         </ol>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+      </div>
       <h3 class="subTitulo" id="unoTres">Mapa físico y lógico de una red</h3>
         <p>A la hora de crear o modificar una red es muy importante documentar su estructura. Deberá llevarse a cabo en dos frentes.</p>
       <h4 class="apartado">Mapa físico</h4>
         <p>Es una representación gráfica de una red en el mundo real. Todo deberá tenerse en cuenta para garantizar que la señal llegue a cada equipo de la mejor forma posible. Se realizan por aplicaciones que nos ofrecen subir los mapas como archivos en formatos para mostrar la representación y poder interacturar con los diferentes componentes o cosultar información de esta.</p>
       <h4 class="apartado">Mapa lógico</h4>
         <p>Documentación que hace referencia a los aspectos internos de la red. Es necesario saber que dirección ip tiene asignada cada ordenador, a que subred pertenece etc... Es una representación más técnica, que facilita el mantenimiento de la red, y la incorporación de nuevos nodos. Hay aplicaciones que nos ayudan a obtener la información necesaria de lso equipos, pero cuando se comprueba de forma masiva en redes muy grandes, se suele utilizar la consola de comandos.</p>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+      </div>
       <h3 class="subTitulo" id="unoCuatro">Arquitectura de un Sistema Operativo</h3>
         <p>Los sitemas operativos han evoluciodo de forma notable, las consolas tipo texto han dejado paso a interfaces de tipo gráfico como windows o mac os x.</p>
         <p>Podemos distinguir en la arquitectura los siguientes elementos clave: <br></p>
@@ -127,6 +147,11 @@
             <li><strong>El sistema de archivos:</strong> Con él obtenemos una estructura lógica de la información grabada en las unidades de disco y podemos trabajar con directorios y archivos. Es frecuente que forme parte del kernel o núcleo.</li>
             <li><strong>Controladores o drivers:</strong> Permite que el sistema interactue con los dispositivos hardware del equipo. <br> La gestión se lleva a cabo a partir de ordenes que recibe el sistema operativo. Para introducirlas podemos usar la interfaz gráfica o la consola.</li>
           </ul>
+          <div class="menuOpcional">
+            <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+            <a href="../../index.html"><div class="botonO">Principal</div></a>
+            <a href="#unoUno"><div class="botonO">Arriba</div></a>
+        </div>
       <h3 class="subTitulo" id="unoCinco">Funciones del Sistema Operativo</h3>
         <ul>
           <li><strong>Administración de procesos</strong>: Decide el orden de procesamientos de los programas que están a la espera, así como asignar los recursos necesarios para su proceso.</li>
@@ -143,6 +168,11 @@
           <li><strong>Gestión de usuarios y permisos</strong>: Administra los permisos a los usuarios que les permiten acceder al sistema y así evitar acciones que afecten al trabajo de otro usuario.</li>
           <li><strong>Control de seguridad</strong>: Para tener en cuenta la seguridad del software, usuarios y la información almacenada en el sistema.</li>
         </ul>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+      </div>
     <h3 class="subTitulo" id="unoSeis">Tipos de sistemas operativos</h3>
         <p>Entendemos por sistema operativo el software encargado de poner en marcha un ordenador, garantizando su correcto funcionamiento. Es el intermediario entre usuario y hardware. Los podemos clasificar: <br></p>
       <h4 class="apartado">Según la cantidad de procesos que pueden gestionar de forma simultánea</h4>
@@ -170,12 +200,22 @@
           <li><strong>Propietarios</strong>: Limitaciones de uso. Propiedad de alguna empresa.</li>
           <li><strong>Libres</strong>: Permiten la modificación del producto. Usar el programa libremente.</li>
         </ul>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+      </div>
     <h3 class="subTitulo" id="unoSiete">Tipos de aplicaciones</h3>
         <ul>
           <li><strong>Aplicaciones locales</strong>: Se almacenan en la unidad de disco local y solamente este tiene acceso a ellas.</li>
           <li><strong>Aplicaciones en red</strong>: Se ejecutan en un entorno de red local. Las aplicaciones primero se ejecutan de manera local y segundo de manera remota.</li>
           <li><strong>Aplicaciones web o en la nube</strong>: La mayor parte se ejecuta en un servidor remoto y queda accesible a través de internet. A veces los datos también se almacenan online.</li>
         </ul>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+      </div>
     <h3 class="subTitulo" id="unoOcho">Licencias y tipos</h3>
     <h4 class="apartado">Licencias</h4>
         <ul>
@@ -190,17 +230,37 @@
           <li><strong>Retail</strong>: Suele tener un coste más elevado. Es posible reinstalarlo, cederlo a terceros o venderlo, ya que pasa a ser propiedad del usuario.</li>
           <li><strong>Por volumen</strong>: Destinado a grandes usuarios (Empresas). Similar a OEM, pero sin afectar a nuevos equipos. Determina el número de equipos en los que se utilizará. El fabricante está autorizado para comprobarlo.</li>
         </ul>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+        </div>
     <h3 class="subTitulo" id="unoNueve">Gestores de arranque</h3>
         <p>Los gestores de arranque son un pequeño programa que se ejecuta una vez iniciada la bios. Prepara los elementos más básicos para que el S.O. funcione.</p>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+      </div>
     <h3 class="subTitulo" id="unoDiez">Maquinas virtuales</h3>
         <p>Son un software que nos permite instalar S.O. de forma que crea que está instalado en un equipo. Hay dos tipos diferentes, las de sistemas y las de proceso. Emulan un ordenador por completo y ejecutan un S.O. en su interior. <br>Utilizan el hardware instalado en el equipo base, todo funcionará como si de un pc normal se tratase.</p>
         <p>Las de proceso no emulan todo el equipo completo sino que ejecutan un proceso concreto como una aplicación. Son muy útiles para crear aplicaciones para varias plataformas, creando un entorno de ejecución para lidiar con el S.O. y no programar específicamente para un sistema.</p>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+      </div>
     <h3 class="subTitulo" id="unoOnce">Consideraciones previas a la instalación de sistemas operativos libres y propietarios</h3>  
         <ul>
           <li><strong>Requisitos del hardware</strong>: La documentación de los S.O. ofrece características mínimas requeridas.</li>
           <li><strong>Medios para la instalación del S.O.</strong>: Periféricos para leer los ficheros de instalación.</li>
           <li><strong>Undidad de destino</strong>: La partición o disco óptimo será la que disponga de mayor rápidez en la lectura/escritura de datos. Es importante planificar que el S.O. y los archivos se encuentren en diferentes particiones. La instalación del S.O. conllevará la destrucción de los datos de la partición elegida, antes será vital realizar una copia de seguridad.</li>
         </ul>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+      </div>
     <h3 class="subTitulo" id="unoDoce">Instalación de sistemas o requisitos, versiones y licencias</h3>
     <h4 class="apartado">Los requisitos principales son:</h4>
         <ul>
@@ -217,6 +277,11 @@
           <li><strong>Primarias</strong>: Pueden ser reconocidas como particiones de arranque. Un disco cuenta con una única partición primaria que abarca todo el espacio disponible, está limitado a cuatro.</li>
           <li><strong>Extendidas o secundarias</strong>: Complemento o ampliación de las primarias que permiten definir más unidades lógicas. Se crearon para saltarse la limitación de cuatro particiones primarias por disco.</li>
         </ul>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+      </div>
     <h3 class="subTitulo" id="unoTrece">Instalación y desintalación de aplicaciones. Requisitos, versiones y licencias.</h3>
         <p>Antes de instalarlas debemos estar seguros de que cumplimos lo especificado en la documentación.</p>
       <ul>
@@ -227,12 +292,22 @@
         <p>La instalación implica llevar a cabo las operaciones precisas para que se pueda ejecutar. Normalmente disponen de un asistente, se distribuyen en un paquete comprimido que bastará con descomprimir.</p>
         <p>La desinstalación es el proceso inverso y el S.O. brinda herramientas para ello.</p>
         <p>Debemos señalar que las sucesivas instalaciones y desinstalaciones van dejando restos en los ficheros de configuración. Estos restos pueden incidir negativamente en el rendimiento.</p>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+      </div>
     <h3 class="subTitulo" id="unoCatorce">Actualización de sistemas operativos y aplicaciones</h3>
         <ul>
           <li><strong>Actualización</strong>: Instalar la nueva versión sin desinstalar la previa.</li>
           <li><strong>Instalación en limpio</strong>: A veces debemos desinstalar la versión previa antes de instalar la nueva.</li>
         </ul>
         <p> En ocasiones su propia interfaz nos advertirá de actualizaciones disponibles. Los S.O. también advierten de actualizaciones disponibles, estas mejoraran y perfilarán funcionalidades y también redundarán en una mayor seguridad. En S.O. linux se pueden utilizar comandos o aplicaciones para comprobar las actualizaciones.</p>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+      </div>
     <h3 class="subTitulo" id="unoQuince">Archivos de inicio de S.O.</h3>
         <p>Los pasos para iniciar un ordenador varian dependiendo a diversos factores, dispositivos de arranque, existencia de particiones, etc...</p>
       <ol>
@@ -240,8 +315,18 @@
         <li>Luego, carga el gestor de arranque y seguidamente el S.O. Aquí se ejecutan los archivos de inicio. Se ocupan de cargar en memoria los servicios o los programas residentes.</li>
       </ol>
         <p>Estos archivos pueden editarse con un editor de texto simple. En algunos casos contamos con software específico para operar cambios.</p>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+      </div>
     <h3 class="subTitulo" id="unoDieciseis">Registros del sistema</h3>
         <p>En determinados S.O. nos brinda un registro que centraliza la configuración, sus servicios y aplicaciones. El visor de eventos complementan la información del registro. Es preciso realizar mantenimiento y limpieza regular.</p>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+      </div>
     <h3 class="subTitulo" id="unoDiecisiete">Actualización y mantenimiento de controladores de dispositivos</h3>
         <p>Drivers o controladores permiten que el S.O. pueden trabajar con ellos, conforme vayan apareciendo nuevas versiones de ellos para optimizar el rendimiento y minimizar problemas en el futuro.</p>
         <ul>
@@ -249,6 +334,12 @@
           <li><strong>Descarga online</strong>: Casi todos los fabricantes disponen de una web de donde descargar.</li>
         </ul>
         <p>Dada su importancia lo ideal es respaldarlos en un momento en el que todo funcione correctamente.</p>
+        <div class="menuOpcional">
+          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../../index.html"><div class="botonO">Principal</div></a>
+          <a href="#unoUno"><div class="botonO">Arriba</div></a>
+      </div>
   </div>
+  <footer class="pieApuntes"><div>- SapheryDesings -</div></footer>
 </body>
 </html>
