--- a/daw/sistemas/sistemasUno.html
+++ b/daw/sistemas/sistemasUno.html
@@ -31,7 +31,7 @@
           <li><strong>Software</strong>: Debemos conocer el tipo de programa que se necesita, sus funcionalidades y la liciencia bajo la que se distribuye.</li>
         </ol>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -77,7 +77,7 @@
         <p>El sistema informático como equipo único o conjunto de equipos de red, la conectividad es un término clave. Referencia la capacidad de los equipos y dispositivos para conectarse entre sí.</p>
         <p>Todo sistema informático estará compuesto de hardware y software. En un sentido más amplio debemos añadir a los usuarios (Recursos humanos) y por supuesto, ls información.</p>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -123,7 +123,7 @@
           <li><strong>Red inalámbrica</strong>: Ha supuesto una revolución en este ámbito, permite habilitar redes sin necesidad de cablearlas físicamente.</li>
         </ol>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -134,7 +134,7 @@
       <h4 class="apartado">Mapa lógico</h4>
         <p>Documentación que hace referencia a los aspectos internos de la red. Es necesario saber que dirección ip tiene asignada cada ordenador, a que subred pertenece etc... Es una representación más técnica, que facilita el mantenimiento de la red, y la incorporación de nuevos nodos. Hay aplicaciones que nos ayudan a obtener la información necesaria de lso equipos, pero cuando se comprueba de forma masiva en redes muy grandes, se suele utilizar la consola de comandos.</p>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -148,7 +148,7 @@
             <li><strong>Controladores o drivers:</strong> Permite que el sistema interactue con los dispositivos hardware del equipo. <br> La gestión se lleva a cabo a partir de ordenes que recibe el sistema operativo. Para introducirlas podemos usar la interfaz gráfica o la consola.</li>
           </ul>
           <div class="menuOpcional">
-            <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+            <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
             <a href="../../index.html"><div class="botonO">Principal</div></a>
             <a href="#unoUno"><div class="botonO">Arriba</div></a>
         </div>
@@ -169,7 +169,7 @@
           <li><strong>Control de seguridad</strong>: Para tener en cuenta la seguridad del software, usuarios y la información almacenada en el sistema.</li>
         </ul>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -201,7 +201,7 @@
           <li><strong>Libres</strong>: Permiten la modificación del producto. Usar el programa libremente.</li>
         </ul>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -212,7 +212,7 @@
           <li><strong>Aplicaciones web o en la nube</strong>: La mayor parte se ejecuta en un servidor remoto y queda accesible a través de internet. A veces los datos también se almacenan online.</li>
         </ul>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -231,14 +231,14 @@
           <li><strong>Por volumen</strong>: Destinado a grandes usuarios (Empresas). Similar a OEM, pero sin afectar a nuevos equipos. Determina el número de equipos en los que se utilizará. El fabricante está autorizado para comprobarlo.</li>
         </ul>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
         </div>
     <h3 class="subTitulo" id="unoNueve">Gestores de arranque</h3>
         <p>Los gestores de arranque son un pequeño programa que se ejecuta una vez iniciada la bios. Prepara los elementos más básicos para que el S.O. funcione.</p>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -246,7 +246,7 @@
         <p>Son un software que nos permite instalar S.O. de forma que crea que está instalado en un equipo. Hay dos tipos diferentes, las de sistemas y las de proceso. Emulan un ordenador por completo y ejecutan un S.O. en su interior. <br>Utilizan el hardware instalado en el equipo base, todo funcionará como si de un pc normal se tratase.</p>
         <p>Las de proceso no emulan todo el equipo completo sino que ejecutan un proceso concreto como una aplicación. Son muy útiles para crear aplicaciones para varias plataformas, creando un entorno de ejecución para lidiar con el S.O. y no programar específicamente para un sistema.</p>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -257,7 +257,7 @@
           <li><strong>Undidad de destino</strong>: La partición o disco óptimo será la que disponga de mayor rápidez en la lectura/escritura de datos. Es importante planificar que el S.O. y los archivos se encuentren en diferentes particiones. La instalación del S.O. conllevará la destrucción de los datos de la partición elegida, antes será vital realizar una copia de seguridad.</li>
         </ul>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -278,7 +278,7 @@
           <li><strong>Extendidas o secundarias</strong>: Complemento o ampliación de las primarias que permiten definir más unidades lógicas. Se crearon para saltarse la limitación de cuatro particiones primarias por disco.</li>
         </ul>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -293,7 +293,7 @@
         <p>La desinstalación es el proceso inverso y el S.O. brinda herramientas para ello.</p>
         <p>Debemos señalar que las sucesivas instalaciones y desinstalaciones van dejando restos en los ficheros de configuración. Estos restos pueden incidir negativamente en el rendimiento.</p>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -304,7 +304,7 @@
         </ul>
         <p> En ocasiones su propia interfaz nos advertirá de actualizaciones disponibles. Los S.O. también advierten de actualizaciones disponibles, estas mejoraran y perfilarán funcionalidades y también redundarán en una mayor seguridad. En S.O. linux se pueden utilizar comandos o aplicaciones para comprobar las actualizaciones.</p>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -316,14 +316,14 @@
       </ol>
         <p>Estos archivos pueden editarse con un editor de texto simple. En algunos casos contamos con software específico para operar cambios.</p>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
     <h3 class="subTitulo" id="unoDieciseis">Registros del sistema</h3>
         <p>En determinados S.O. nos brinda un registro que centraliza la configuración, sus servicios y aplicaciones. El visor de eventos complementan la información del registro. Es preciso realizar mantenimiento y limpieza regular.</p>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
@@ -335,7 +335,7 @@
         </ul>
         <p>Dada su importancia lo ideal es respaldarlos en un momento en el que todo funcione correctamente.</p>
         <div class="menuOpcional">
-          <a href="../bdUno/indiceBdUno.html"><div class="botonO">Índice</div></a>
+          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
