--- a/daw/sistemas/indiceSistemas.html
+++ b/daw/sistemas/indiceSistemas.html
@@ -23,23 +23,23 @@
         <section class="temaIndice">
             <span>1.- Instalación software libre y propietario</span>
             <ul>
-              <li><a href="./sistemasUno.html#1.1">Estructura y componentes de un sistema informático. Periféricos y adaptadores para la conexion de dispositivos</a></li>
-              <li><a href="./sistemasUno.html#1.2">Tipos y topologías de red</a></li>
-              <li><a href="./sistemasUno.html#1.3">Mapa físico y lógico de una red</a></li>
-              <li><a href="./sistemasUno.html#1.4">Arquitectura de un sitema operativo</a></li>
-              <li><a href="./sistemasUno.html#1.5">Funciones del sistema operativo</a></li>
-              <li><a href="./sistemasUno.html#1.6">Tipos de sistemas operativos</a></li>
-              <li><a href="./sistemasUno.html#1.7">Tipos de aplicaciones</a></li>
-              <li><a href="./sistemasUno.html#1.8">Licencias y tipos de licencias</a></li>
-              <li><a href="./sistemasUno.html#1.9">Gestores de arranque</a></li>
-              <li><a href="./sistemasUno.html#1.10">Máquinas virtuales</a></li>
-              <li><a href="./sistemasUno.html#1.11">Consideraciones previas a la instalación de sistemas operativos libres y propietarios</a></li>
-              <li><a href="./sistemasUno.html#1.12">Instalación de sistemas operativos. Requisitos, versiones y licencias</a></li>
-              <li><a href="./sistemasUno.html#1.13">Instalación y desinstalación de aplicaciones. Requisitos, versiones y licencias</a></li>
-              <li><a href="./sistemasUno.html#1.14">Actualización de sistemas operativos y aplicaciones</a></li>
-              <li><a href="./sistemasUno.html#1.15">Archivos de inicio de sistemas operativos</a></li>
-              <li><a href="./sistemasUno.html#1.16">Registro del sistema</a></li>
-              <li><a href="./sistemasUno.html#1.17">Actualización y mantenimiento de controladores de dispositivos</a></li>
+              <li><a href="./sistemasUno.html#unoUno">Estructura y componentes de un sistema informático. Periféricos y adaptadores para la conexion de dispositivos</a></li>
+              <li><a href="./sistemasUno.html#unoDos">Tipos y topologías de red</a></li>
+              <li><a href="./sistemasUno.html#unoTres">Mapa físico y lógico de una red</a></li>
+              <li><a href="./sistemasUno.html#unoCuatro">Arquitectura de un sitema operativo</a></li>
+              <li><a href="./sistemasUno.html#unoCinco">Funciones del sistema operativo</a></li>
+              <li><a href="./sistemasUno.html#unoSeis">Tipos de sistemas operativos</a></li>
+              <li><a href="./sistemasUno.html#unoSiete">Tipos de aplicaciones</a></li>
+              <li><a href="./sistemasUno.html#unoOcho">Licencias y tipos de licencias</a></li>
+              <li><a href="./sistemasUno.html#unoNueve">Gestores de arranque</a></li>
+              <li><a href="./sistemasUno.html#unoDiez">Máquinas virtuales</a></li>
+              <li><a href="./sistemasUno.html#unoOnce">Consideraciones previas a la instalación de sistemas operativos libres y propietarios</a></li>
+              <li><a href="./sistemasUno.html#unoDoce">Instalación de sistemas operativos. Requisitos, versiones y licencias</a></li>
+              <li><a href="./sistemasUno.html#unoTrece">Instalación y desinstalación de aplicaciones. Requisitos, versiones y licencias</a></li>
+              <li><a href="./sistemasUno.html#unoCatorce">Actualización de sistemas operativos y aplicaciones</a></li>
+              <li><a href="./sistemasUno.html#unoQuince">Archivos de inicio de sistemas operativos</a></li>
+              <li><a href="./sistemasUno.html#unoDieciseis">Registro del sistema</a></li>
+              <li><a href="./sistemasUno.html#unoDiecisiete">Actualización y mantenimiento de controladores de dispositivos</a></li>
             </ul>
         </section>
         <section class="temaIndice">
